--- a/kucheriavykh-i-25-26-operational-practice-muiv.ipynb
+++ b/kucheriavykh-i-25-26-operational-practice-muiv.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "daf418c0",
+   "id": "595892f3",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2026-01-25T13:46:24.041498Z",
-     "iopub.status.busy": "2026-01-25T13:46:24.040596Z",
-     "iopub.status.idle": "2026-01-25T13:46:34.706091Z",
-     "shell.execute_reply": "2026-01-25T13:46:34.704894Z"
+     "iopub.execute_input": "2026-01-27T16:21:49.198116Z",
+     "iopub.status.busy": "2026-01-27T16:21:49.197721Z",
+     "iopub.status.idle": "2026-01-27T16:22:01.018624Z",
+     "shell.execute_reply": "2026-01-27T16:22:01.017630Z"
     },
     "papermill": {
-     "duration": 10.671821,
-     "end_time": "2026-01-25T13:46:34.708542",
+     "duration": 11.827247,
+     "end_time": "2026-01-27T16:22:01.020997",
      "exception": false,
-     "start_time": "2026-01-25T13:46:24.036721",
+     "start_time": "2026-01-27T16:21:49.193750",
      "status": "completed"
     },
     "tags": []
@@ -43,19 +43,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8eb67fb7",
+   "id": "4bea6b2a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-25T13:46:34.714271Z",
-     "iopub.status.busy": "2026-01-25T13:46:34.713634Z",
-     "iopub.status.idle": "2026-01-25T14:12:47.439385Z",
-     "shell.execute_reply": "2026-01-25T14:12:47.437769Z"
+     "iopub.execute_input": "2026-01-27T16:22:01.027216Z",
+     "iopub.status.busy": "2026-01-27T16:22:01.026488Z",
+     "iopub.status.idle": "2026-01-27T16:46:35.524080Z",
+     "shell.execute_reply": "2026-01-27T16:46:35.522319Z"
     },
     "papermill": {
-     "duration": 1572.732241,
-     "end_time": "2026-01-25T14:12:47.442505",
+     "duration": 1474.504706,
+     "end_time": "2026-01-27T16:46:35.527934",
      "exception": false,
-     "start_time": "2026-01-25T13:46:34.710264",
+     "start_time": "2026-01-27T16:22:01.023228",
      "status": "completed"
     },
     "tags": []
@@ -80,7 +80,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c570a289c3b4cfcbbf13e0609d6eebd",
+       "model_id": "49675a19d97542c5b0dbd59e1b703c97",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,7 +96,7 @@
      "output_type": "stream",
      "text": [
       "Удаление CSV...\n",
-      "Готово за 0.5 мин.\n",
+      "Готово за 0.4 мин.\n",
       "\n",
       "ОБРАБОТКА: transactions.parquet\n",
       "Распаковка...\n",
@@ -106,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1894a1ccfd3d4c53a0238b98522b9dc2",
+       "model_id": "7431dce0e5954cb7aff55316e01090be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,18 +122,18 @@
      "output_type": "stream",
      "text": [
       "Удаление CSV...\n",
-      "Готово за 1.6 мин.\n",
+      "Готово за 1.3 мин.\n",
       "\n",
       "ОБРАБОТКА (STREAMING): user_logs.parquet\n",
       "Запуск трубы (7z -> Python -> Parquet)...\n",
       "   ...обработано 390 млн строк\r\n",
-      "Стриминг завершен за 24.0 мин.\n",
+      "Стриминг завершен за 22.7 мин.\n",
       "\n",
       "ВСЕ ГОТОВО!\n",
-      "-rw-r--r-- 1 root root 226M Jan 25 13:47 /kaggle/working/members.parquet\r\n",
-      "-rw-r--r-- 1 root root  32M Jan 25 13:46 /kaggle/working/train.parquet\r\n",
-      "-rw-r--r-- 1 root root 727M Jan 25 13:48 /kaggle/working/transactions.parquet\r\n",
-      "-rw-r--r-- 1 root root 7.3G Jan 25 14:12 /kaggle/working/user_logs.parquet\r\n"
+      "-rw-r--r-- 1 root root 226M Jan 27 16:22 /kaggle/working/members.parquet\r\n",
+      "-rw-r--r-- 1 root root  32M Jan 27 16:22 /kaggle/working/train.parquet\r\n",
+      "-rw-r--r-- 1 root root 727M Jan 27 16:23 /kaggle/working/transactions.parquet\r\n",
+      "-rw-r--r-- 1 root root 7.3G Jan 27 16:46 /kaggle/working/user_logs.parquet\r\n"
      ]
     }
    ],
@@ -228,19 +228,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20c62bc8",
+   "id": "794712ab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-25T14:12:47.454547Z",
-     "iopub.status.busy": "2026-01-25T14:12:47.454092Z",
-     "iopub.status.idle": "2026-01-25T14:12:47.578280Z",
-     "shell.execute_reply": "2026-01-25T14:12:47.576950Z"
+     "iopub.execute_input": "2026-01-27T16:46:35.541969Z",
+     "iopub.status.busy": "2026-01-27T16:46:35.540169Z",
+     "iopub.status.idle": "2026-01-27T16:46:35.684169Z",
+     "shell.execute_reply": "2026-01-27T16:46:35.682636Z"
     },
     "papermill": {
-     "duration": 0.13388,
-     "end_time": "2026-01-25T14:12:47.580760",
+     "duration": 0.153847,
+     "end_time": "2026-01-27T16:46:35.686552",
      "exception": false,
-     "start_time": "2026-01-25T14:12:47.446880",
+     "start_time": "2026-01-27T16:46:35.532705",
      "status": "completed"
     },
     "tags": []
@@ -260,9 +260,6 @@
     }
    ],
    "source": [
-    "import duckdb\n",
-    "\n",
-    "# Проверяем, что файлы создались и в них есть данные\n",
     "files = ['train', 'members', 'transactions', 'user_logs']\n",
     "\n",
     "print(f\"{'ФАЙЛ':<15} | {'РАЗМЕР (MB)':<12} | {'СТРОК (ROWS)':<15}\")\n",
@@ -270,20 +267,17 @@
     "\n",
     "for name in files:\n",
     "    path = f\"/kaggle/working/{name}.parquet\"\n",
-    "    \n",
-    "    # 1. Проверяем физический размер\n",
+    "\n",
     "    if os.path.exists(path):\n",
     "        size_mb = os.path.getsize(path) / (1024 * 1024)\n",
-    "        \n",
-    "        # 2. Считаем строки через DuckDB (это мгновенно для Parquet)\n",
-    "        # Используем try-except на случай битого файла\n",
+    "\n",
     "        try:\n",
     "            row_count = duckdb.query(f\"SELECT COUNT(*) FROM '{path}'\").fetchone()[0]\n",
     "            print(f\"{name:<15} | {size_mb:<12.1f} | {row_count:<15}\")\n",
     "        except Exception as e:\n",
-    "            print(f\"{name:<15} | {size_mb:<12.1f} | ❌ ОШИБКА ЧТЕНИЯ\")\n",
+    "            print(f\"{name:<15} | {size_mb:<12.1f} | ОШИБКА ЧТЕНИЯ\")\n",
     "    else:\n",
-    "        print(f\"{name:<15} | ❌ НЕ НАЙДЕН\")"
+    "        print(f\"{name:<15} | НЕ НАЙДЕН\")"
    ]
   }
  ],
@@ -322,46 +316,20 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 1587.362006,
-   "end_time": "2026-01-25T14:12:48.209950",
+   "duration": 1491.542058,
+   "end_time": "2026-01-27T16:46:36.618301",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2026-01-25T13:46:20.847944",
+   "start_time": "2026-01-27T16:21:45.076243",
    "version": "2.6.0"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "1894a1ccfd3d4c53a0238b98522b9dc2": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "_dom_classes": [],
-       "_model_module": "@jupyter-widgets/controls",
-       "_model_module_version": "2.0.0",
-       "_model_name": "FloatProgressModel",
-       "_view_count": null,
-       "_view_module": "@jupyter-widgets/controls",
-       "_view_module_version": "2.0.0",
-       "_view_name": "ProgressView",
-       "bar_style": "",
-       "description": "",
-       "description_allow_html": false,
-       "layout": "IPY_MODEL_28d23391a51843cb9cc79c4650406cbd",
-       "max": 100.0,
-       "min": 0.0,
-       "orientation": "horizontal",
-       "style": "IPY_MODEL_98d1d794576d4fe9be39f80f80f29412",
-       "tabbable": null,
-       "tooltip": null,
-       "value": 100.0
-      }
-     },
-     "28d23391a51843cb9cc79c4650406cbd": {
+     "3913b3ed9cac4d598cf9d724c50cee4b": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
@@ -414,7 +382,7 @@
        "width": "auto"
       }
      },
-     "7c570a289c3b4cfcbbf13e0609d6eebd": {
+     "49675a19d97542c5b0dbd59e1b703c97": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
       "model_name": "FloatProgressModel",
@@ -430,17 +398,43 @@
        "bar_style": "",
        "description": "",
        "description_allow_html": false,
-       "layout": "IPY_MODEL_f503e160410043439009367f3bf27589",
+       "layout": "IPY_MODEL_3913b3ed9cac4d598cf9d724c50cee4b",
        "max": 100.0,
        "min": 0.0,
        "orientation": "horizontal",
-       "style": "IPY_MODEL_a9e2f49f2e524b2fa23e07ffe0e899c6",
+       "style": "IPY_MODEL_d68a15819a2b47dfadac6b77e2e26b27",
        "tabbable": null,
        "tooltip": null,
        "value": 100.0
       }
      },
-     "98d1d794576d4fe9be39f80f80f29412": {
+     "7431dce0e5954cb7aff55316e01090be": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "FloatProgressModel",
+      "state": {
+       "_dom_classes": [],
+       "_model_module": "@jupyter-widgets/controls",
+       "_model_module_version": "2.0.0",
+       "_model_name": "FloatProgressModel",
+       "_view_count": null,
+       "_view_module": "@jupyter-widgets/controls",
+       "_view_module_version": "2.0.0",
+       "_view_name": "ProgressView",
+       "bar_style": "",
+       "description": "",
+       "description_allow_html": false,
+       "layout": "IPY_MODEL_e27a50bc923d46fb877cd71deb7da0df",
+       "max": 100.0,
+       "min": 0.0,
+       "orientation": "horizontal",
+       "style": "IPY_MODEL_d6f39279c0ff46c4ad1fa514cad41fb8",
+       "tabbable": null,
+       "tooltip": null,
+       "value": 100.0
+      }
+     },
+     "d68a15819a2b47dfadac6b77e2e26b27": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
       "model_name": "ProgressStyleModel",
@@ -456,7 +450,7 @@
        "description_width": ""
       }
      },
-     "a9e2f49f2e524b2fa23e07ffe0e899c6": {
+     "d6f39279c0ff46c4ad1fa514cad41fb8": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
       "model_name": "ProgressStyleModel",
@@ -472,7 +466,7 @@
        "description_width": ""
       }
      },
-     "f503e160410043439009367f3bf27589": {
+     "e27a50bc923d46fb877cd71deb7da0df": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
